syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "remianders/protos";

package remainderprotos;

service ReminderService {

	rpc AddRemainder(AddRemainderRequest) returns (AddRemainderResponse);
	
	rpc DeleteRemainder(DeleteRemainderRequest) returns (DeleteRemainderResponse);

	rpc ListRemainders(ListRemaindersRequest) returns (ListRemaindersResponse);

	rpc UpdateRemainder(UpdateRemainderRequest) returns (UpdateRemainderResponse);
}

message Remainder {
	string remainderId = 1;
	string remainder = 2;
	string userUID = 3;
	google.protobuf.Timestamp remainderTime = 4;
}



message AddRemainderRequest {
	Remainder remainder = 1;
}

message AddRemainderResponse {
	Remainder remainder = 1;
}

message DeleteRemainderRequest {
	string remainderID = 1;
}

message DeleteRemainderResponse {
	Remainder remainderID = 1;
}

message ListRemaindersRequest {
	string userUID = 1;
}

message ListRemaindersResponse {
	repeated Remainder remainders = 1;
}

message UpdateRemainderRequest {
	Remainder remainder = 1;
}

message UpdateRemainderResponse {
	Remainder remainder = 2;
}
